# delivery-engine

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAYBOOK_SPEC.md  PROJECT_CHARTER.md  QUICKSTART.md  README.md  STEP12_DECISIONS.md  STEP13_DECISIONS.md  STEP14_DECISIONS.md  STEP16_DECISIONS.md  STEP23_DECISIONS.md  USER_GUIDE.md  discover_dataset.py  generate_report.py  generate_trend.py  project_dump.txt  pyproject.toml  run_fraud.py  run_project.py  run_supplychain.py
.github/workflows/: ci.yml  docker-publish.yml
analystkit-mcp/: MIGRATION.md  README.md  pyproject.toml
analystkit-mcp/src/analystkit_mcp/: __init__.py  findings.py  server.py  tools.py
analystkit-mcp/tests/: test_server.py
delivery-engine-step2/: PLAYBOOK_SPEC.md
delivery-engine-step2/tests/: test_playbook.py
docs/: PROJECT_CHARTER.html  README.md  RELEASE_v1.0.md  how-the-examples-grew-up.md
docs/decisions/: STEP10_DECISIONS.md  STEP11_DECISIONS.md  STEP15_DECISIONS.md  STEP17_DECISIONS.md  STEP18_DECISIONS.md  STEP19_DECISIONS.md  STEP20_DECISIONS.md  STEP21_DECISIONS.md  STEP22_DECISIONS.md  STEP5_DECISIONS.md  STEP7_DECISIONS.md  STEP8_DECISIONS.md  STEP9_DECISIONS.md
example_package/: audit_log.jsonl  plan.json
example_package_dq/: README.md  audit_log.jsonl  narrative_report.md
example_package_math/: audit_log.jsonl  handoff_manifest.json  manifest.json  narrative_report.md  plan.json
example_package_stats/: README.md  audit_log.jsonl  execution_preview.md  handoff_manifest.json  manifest.json  narrative_report.md  plan.json
example_package_stats/findings/: dq_profile.json  stats.json
examples/: README.md  index.html
examples/audit_data_quality/: README.md  audit_issues.csv  run_example.py
examples/churn_analysis/: README.md  customers.csv  run_example.py
examples/customer_profiling/: README.md  run_example.py
examples/historical/: README.md
examples/paysim_fraud/: README.md  audit_log.jsonl  compatibility_report.md  execution_preview.md  narrative_report.md  report.html  run_example.py
examples/segment_comparison/: README.md  run_example.py  signup_conversion.csv
examples/transaction_monitoring/: README.md  (+2 more)
historical/: README.md  dump_code.py  generate_playbook.py  run_insurance.py  scale_test.py
opskit-mcp/: README.md  STEP6_DECISIONS.md  pyproject.toml
opskit-mcp/src/opskit_mcp/: __init__.py  envelope.py  server.py  service.py
opskit-mcp/src/opskit_mcp/_vendor/: __init__.py  opskit4.py
opskit-mcp/tests/: test_opskit_mcp.py
playbooks/: churn_analysis.toml  data_quality_review.toml  healthcare_claims_audit.toml  ops_review.toml  segment_comparison.toml  supplychain_audit.toml  transaction_monitoring_review.toml  universal_audit.toml
tests/: test_executor.py  test_planner.py  test_playbook.py  test_step10.py  test_step11.py  test_step13.py  test_step14.py  test_step15.py  test_step16.py  test_step17.py  test_step18.py  test_step19.py  test_step20.py  test_step21.py  test_step22.py  test_step23.py  test_step5.py  test_step7.py  test_step8.py  test_step9.py
(+183 files in other folders)
