[project]
name = "opskit-mcp"
version = "0.1.0"
description = "OpsKit v4.1 operational-analysis playbooks exposed as MCP tools with hashed findings envelopes"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27,<2",
    "duckdb>=1.5",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.scripts]
opskit-mcp = "opskit_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opskit_mcp = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
